--- a/style.css
+++ b/style.css
@@ -86,7 +86,7 @@ button:enabled:active {
   color: #ff6b00;
 }
 
-.supporting-text {
+.supporting-text h2 {
   font-family: 'Roboto', sans-serif;
   font-weight: 700;
   font-size: 24px;
