--- a/style.css
+++ b/style.css
@@ -24,10 +24,6 @@ header > * {
   color: white;
 }
 
-header p {
-  font-family: 'Roboto', sans-serif;
-}
-
 /* Button Section */
 
 button:enabled {
@@ -59,7 +55,6 @@ button:enabled:active {
 .container {
   position: relative;
   width: 100%;
-  height: 590px;
   top: 50px;
 }
 
@@ -85,7 +80,8 @@ button:enabled:active {
   width: 330px;
 }
 
-.headline h1 {
+.headline h1,
+.heading-text {
   font-family: 'Crete Round', sans-serif;
   font-weight: 400;
   font-size: 56px;
@@ -167,7 +163,7 @@ button:enabled:active {
   color: #091E42;
 }
 
-.right-block p {
+.right-block p{
   font-family: 'Inter', sans-serif;
   font-weight: 400;
   font-size: 16px;
@@ -192,11 +188,11 @@ button:enabled:active {
   color: #091E42;
 }
 
-.featured-btn {
+.right-block .regular-btn {
   width: 120px;
 }
 
-.featured-btn,
+.regular-btn,
 .card-btn {
   padding: 12px;
   font-family: 'Inter', sans-serif;
@@ -237,8 +233,97 @@ button:enabled:active {
   order: 1;
 }
 
-.right-block .tags li {
+.card .right-block .tags li {
   border: none;
   background: rgba(255, 255, 255, 0.24);
   color: white;
+}
+
+/* About Section */
+
+.about {
+  list-style: none;
+  min-height: 1800px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  background-color: #1c1a19;
+  background-image: url('assets/images/Frame.png');
+  background-repeat: no-repeat;
+  background-size: 35%;
+  background-position-x: calc(100%);
+  background-position-y: 18%;
+}
+
+.gen-desc {
+  width: 88%;
+  margin-bottom: 155px;
+}
+
+.gen-desc > * {
+  margin: 6px 0px;
+}
+
+.gen-desc button{
+  margin: 20px 0px;
+}
+
+.paragraph-text {
+  font-family: 'Inter', sans-serif;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 24px;
+  color: white;
+}
+
+
+/* Skills Section */
+
+.skills {
+  height: 1200px;
+  width: 85%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  border-top: 1px solid white;
+  row-gap: 24px;
+}
+
+.skills li {  
+  color: white;
+  display: flex;
+  flex-direction: column;
+  font-family: 'Inter', sans-serif;
+  font-size: 32px;
+  font-weight: 700;
+  line-height: 44px;
+  list-style: none;
+  row-gap: 12px;
+}
+
+.sub-skills {
+  display: flex;
+  column-gap: 10px;
+  align-items: center;
+}
+
+.sub-skills img {
+  width: 18px;
+  height: 18px;
+}
+
+.skill-type {
+  display: flex;
+  flex-direction: column;
+  row-gap: 12px;
+}
+
+.skill-type li {
+  font-family: 'Inter', sans-serif;
+  font-size: 22px;
+  font-weight: 400;
+  line-height: 43px;
+  text-align: center;
 }
