--- a/style.css
+++ b/style.css
@@ -332,3 +332,53 @@ button:enabled:active {
   flex-direction: column;
   row-gap: 12px;
 }
+
+/* Contact form */
+
+.form-container {
+  display: grid;
+  grid-template-columns: 2;
+}
+
+.contact-form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 24px;
+}
+
+.contact-text {
+  font-family: 'Inter';
+  font-style: normal;
+  font-weight: 700;
+  font-size: 32px;
+  line-height: 44px;
+  text-align: center;
+  color: #172B4D;
+  margin: 120px 24px 60px;
+}
+
+.input-field,
+.textarea-field{
+  width: 327px;
+  border: none;
+  font-family: 'Inter';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 15px;
+  line-height: 24px;
+}
+
+.input-field {
+  height: 48px;
+  border-bottom: 1px solid #DBD8D7;
+}
+
+.textarea-field{
+  height: 114px;
+}
+
+.submit-btn {
+  width: 130px;
+  height: 48px;
+}
