Correct linter error

--- a/style.css
+++ b/style.css
@@ -396,7 +396,7 @@ h1 {
   font-weight: 400;
   font-size: 1em;
   line-height: 24px;
-  background: #FBF8F7;
+  background: #fbf8f7;
 }
 
 .input-field {
