--- a/style.css
+++ b/style.css
@@ -53,8 +53,8 @@ button:enabled {
 }
 
 button:hover {
-  background-color: #fff5e1;
-  color: #f55800;
+  background-color: white;
+  color: #cc4b00;
   transition-duration: 0.4s;
 }
 
@@ -70,9 +70,9 @@ button:disabled {
 }
 
 button:enabled:active {
-  background-color: #e05304;
+  background-color: #cc4b00;
   color: white;
-  border-color: #e05304;
+  border-color: #cc4b00;
 }
 
 /* Body Section */
