--- a/style.css
+++ b/style.css
@@ -29,6 +29,23 @@ header > * {
   color: white;
 }
 
+.header-container nav {
+  width: 100%;
+  height: 90vh;
+  display: flex;
+  align-items: flex-start;
+  flex-direction: column;
+  gap: 3rem;
+  font-size: 32px;
+  font-weight: 700;
+}
+
+#exit-icon {
+  order: -1;
+  align-self: flex-end;
+  margin: 10px 0 -10px;
+}
+
 nav a {
   color: white;
   display: block;
