--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@ header {
 }
 
 .header-container {
-  height: 90vh;
+  height: 108vh;
 }
 
 header > * {
@@ -31,19 +31,23 @@ header > * {
 
 .header-container nav {
   width: 100%;
-  height: 90vh;
   display: flex;
   align-items: flex-start;
   flex-direction: column;
-  gap: 3rem;
   font-size: 32px;
   font-weight: 700;
+}
+
+.header-container nav a{
+  width: 100%;
+  border-bottom: 1px solid #6F6C6B;
+  padding: 1.75rem 0 1rem;
 }
 
 #exit-icon {
   order: -1;
   align-self: flex-end;
-  margin: 10px 0 -10px;
+  margin: 10px 0 0;
 }
 
 nav a {
