--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@ header {
 }
 
 .header-container {
-  height: 108vh;
+  height: 93vh;
 }
 
 header > * {
@@ -38,18 +38,6 @@ header > * {
   font-weight: 700;
 }
 
-.header-container nav a{
-  width: 100%;
-  border-bottom: 1px solid #6F6C6B;
-  padding: 1.75rem 0 1rem;
-}
-
-#exit-icon {
-  order: -1;
-  align-self: flex-end;
-  margin: 10px 0 0;
-}
-
 nav a {
   color: white;
   display: block;
@@ -59,6 +47,46 @@ nav a {
   font-size: 1em;
   line-height: 20px;
   text-decoration: none;
+}
+
+footer a {
+  margin: 10px;
+  color: #505f79;
+  font-size: 1.1875em;
+}
+
+.social-media a {
+  margin: 10px;
+  color: #dbd8d7;
+  font-size: 1.1875em;
+}
+
+.header-container nav a {
+  width: 100%;
+  border-bottom: 1px solid #6f6c6b;
+  padding: 1.75rem 0 1rem;
+}
+
+#exit-icon {
+  order: -1;
+  align-self: flex-end;
+  margin: 10px 0 0;
+}
+
+.menu-indicator {
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  height: 7vh;
+  background-color: white;
+  display: flex;
+  justify-content: center;
+  align-items: flex-end;
+}
+
+.menu-indicator img {
+  padding: 10px;
 }
 
 .hide {
@@ -444,18 +472,6 @@ footer {
   background-size: 33%;
   background-position-x: 50%;
   background-position-y: 100%;
-}
-
-footer a {
-  margin: 10px;
-  color: #505f79;
-  font-size: 1.1875em;
-}
-
-.social-media a {
-  margin: 10px;
-  color: #dbd8d7;
-  font-size: 1.1875em;
 }
 
 /* Animations */
