--- a/style.css
+++ b/style.css
@@ -283,7 +283,7 @@ h1 {
 
 .right-block .tags li:hover {
   font-size: 1.125em;
-  padding: inherit 18px;
+  padding: 10px 18px;
   font-weight: 600;
   transition-duration: 0.2s;
 }
