--- a/style.css
+++ b/style.css
@@ -8,7 +8,6 @@ html {
 }
 
 /* Header Section */
-
 header {
   position: absolute;
   width: 100%;
@@ -98,7 +97,6 @@ footer a {
 }
 
 /* Button Section */
-
 button:enabled {
   background-color: #cc4b00;
   color: white;
@@ -130,7 +128,6 @@ button:enabled:active {
 }
 
 /* Body Section */
-
 .container {
   position: relative;
   width: 100%;
@@ -138,7 +135,6 @@ button:enabled:active {
 }
 
 /* Headline Section */
-
 .headline {
   min-height: 590px;
   height: 100vh;
@@ -197,7 +193,6 @@ h1 {
 }
 
 /* Works Section */
-
 .recent-works {
   margin: 80px 6% 120px;
   row-gap: 25px;
@@ -274,6 +269,24 @@ h1 {
   text-align: center;
 }
 
+.modal li {
+  font-family: 'Poppins', sans-serif;
+  font-weight: 600;
+  font-size: 1em;
+  line-height: 16px;
+  text-decoration: none;
+  padding: 10px 12px;
+  border: 1px solid #979493;
+  color: #3c3a39;
+}
+
+.modal li:hover {
+  font-size: 1.125em;
+  padding: 10px 18px;
+  font-weight: 700;
+  transition-duration: 0.2s;
+}
+
 .right-block .tags li {
   font-family: 'Inter', sans-serif;
   font-weight: 500;
@@ -343,7 +356,6 @@ h1 {
 }
 
 /* About Section */
-
 .about {
   list-style: none;
   min-height: 1800px;
@@ -377,7 +389,6 @@ h1 {
 }
 
 /* Skills Section */
-
 .skills {
   height: 1200px;
   width: 85%;
@@ -407,7 +418,6 @@ h1 {
 }
 
 /* Contact form */
-
 .form-container {
   display: grid;
   margin: 125px 6% 0;
@@ -464,10 +474,81 @@ footer {
 }
 
 /* Animations */
-
 .description p {
   animation-duration: 5s;
   animation-name: slidein;
+}
+
+.overlay {
+  position: fixed;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 100vh;
+  z-index: 10;
+  background-color: rgba(0, 0, 0, 0.5);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.modal {
+  width: 80%;
+  height: auto;
+  background-color: #fff;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  padding: 1rem;
+  gap: 1.5rem;
+}
+
+.modal .heading {
+  display: flex;
+  width: 100%;
+  justify-content: space-between;
+}
+
+.modal #exit-modal {
+  min-width: 40px;
+  height: 40px;
+}
+
+.modal h3 {
+  font-family: 'Roboto', sans-serif;
+  font-weight: 700;
+  font-size: 2em;
+  line-height: 44px;
+  color: #172b4d;
+  height: auto;
+}
+
+.modal-tags {
+  column-gap: 2%;
+  display: flex;
+  list-style: none;
+}
+
+.modal > img {
+  max-height: 220px;
+  width: 100%;
+}
+
+.modal p {
+  font-family: 'Inter', sans-serif;
+  font-weight: 400;
+  font-size: 1em;
+  line-height: 24px;
+  color: #344563;
+}
+
+.modal .buttons {
+  width: 100%;
+  display: grid;
+  grid-template-columns: auto auto;
+  column-gap: 1.125rem;
 }
 
 @keyframes slidein {
@@ -629,6 +710,36 @@ footer {
   footer {
     background-image: none;
     margin: 0 10%;
+  }
+
+  .modal {
+    display: grid;
+    grid-template-columns: 3fr 2fr;
+    grid-template-rows: auto auto 6fr auto;
+    padding: 1rem;
+    gap: 1rem;
+  }
+
+  .modal .heading {
+    grid-column: 1 / 3;
+  }
+
+  .modal #exit-modal {
+    min-width: 20px;
+    height: 20px;
+  }
+
+  .modal-tags {
+    grid-column: 1 / 3;
+  }
+
+  .modal > img {
+    grid-row: 3 / 5;
+    max-height: 400px;
+  }
+
+  .modal .buttons {
+    display: flex;
   }
 
   @media screen and (max-width: 980px) {
